style.css
html {
    scroll-behavior: auto;
}

body {
    color: #101016;
    background: #e6e9e7;
    font-family: 'Rubik', sans-serif;
    padding: 24px;
}

#wrapper {
    overflow-x: hidden;
}

nav {
    flex: 1 1 0%;
}

a {
    text-decoration: none;
    color: #e6e9e7;
    background-color: #567a98;
    padding: 5px;
    border-radius: 5px;
}
  
@media (prefers-color-scheme: dark) {
    body {
        color: #e6e9e7;
        background: #101016;
    }
  }

* {
    box-sizing: border-box;
}

#header {
    height: 100vh;
}

.header-shape {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #567a98;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-clip-path: polygon(0 0, 700px 0, 0 400px, 0 0);
    clip-path: polygon(0 0, 700px 0, 0 400px, 0 0);
}

.header-top {
    height: 100px;
    width: 100%;
    position: relative;
    display: flex;
}

.header-list {
    display: inline-block;
    float: right;
    margin-right: 12px;
}

.header-container {
    margin: auto auto;
    width: 80%;
    position: relative;
    top: calc(50% - 72px);
    transform: translateY(-100%)
}

.header-content {
    text-align: center;
}

.header-firstname, .header-surname {
    font-size: 72px;
    font-weight: bold;
    position: relative;
    left: calc(50% - 175px);
}

.header-surname {
    transform: translateX(72px);
}

.header-info {
    margin-top: 12px;
    font-size: 24px;
    font-weight: bold;
    color: #567a98;
    text-align: center;
}

.zoom {
    transition: transform .2s;
}

.zoom:hover {
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
}

#main {
    width: 60%;
    margin: auto auto;
}

.main-title {
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 24px;
}

.main-container {
    display: flex;
    -webkit-box-pack: justify;
    justify-content: space-between;
}

.left-column, .right-column {
    display: inline;
    font-size: large;
    font-weight: bold;
    flex: 0 1 45%;
}

.column-title {
    font-size: 24px;
    font-weight: bold;
    color: #567a98;
}

.column-subtitle {
    font-size: 18px;
    font-weight: bold;
}

